--- a/projek_zaawansowane_techniki_internetowe/Views/Shared/_Layout.cshtml
+++ b/projek_zaawansowane_techniki_internetowe/Views/Shared/_Layout.cshtml
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -10,7 +10,6 @@
 </head>
 <body>
     @RenderBody()
-
     @RenderSection("scripts", required: false)
 </body>
 </html>
